hphp/test/slow/hack_mode/closing-tag-asp.php.expectf
Fatal error: syntax error, unexpected T_HH_ERROR, expecting $end in %s/test/slow/hack_mode/closing-tag-asp.php on line 2